Init-Container/10-App-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: init-container-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: init-container-app
  template:
    metadata:
      labels:
        app: init-container-app
    spec:
      containers:
        - name: app
          image: fpommerening/container-training:initializer-main
          imagePullPolicy: IfNotPresent
          ports:
            - name: webs
              containerPort: 80
